<resources>
    <string name="action_save">Save</string>
    <string name="app_name">Book Inventory</string>
    <string name="add_a_new_book">Add a new Book</string>
    <string name="add_book">Add Book</string>
    <string name="book_deleted">Book deleted</string>
    <string name="book_updated">Book updated</string>
    <string name="cancel">Cancel</string>
    <string name="cant_contact_supplier">Unable to contact the supplier. Either a phone app or email app is required.</string>
    <string name="couldnt_delete_book">Couldn\'t delete book</string>
    <string name="delete">Delete</string>
    <string name="delete_this_book">Delete this book?</string>
    <string name="discard">Discard</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="edit_this_book">Edit this book</string>
    <string name="empty_header">There are no books in the database.</string>
    <string name="empty_header_sub">Use the button in the menu to add a book.</string>
    <string name="error_inserting_new_book">Error inserting new book.</string>
    <string name="error_updating_book">Error updating book</string>
    <string name="free">Free!</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="new_book_inserted">New book inserted</string>
    <string name="ok">OK</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="order">Order</string>
    <string name="order_book_email_msg_format">Book name: %1$s</string>
    <string name="order_request">Order Request</string>
    <string name="price_format">Price: $%1$d</string>
    <string name="quantity_format">QTY: %1$d</string>
    <string name="sold">Sold!</string>
    <string name="label_name">Name:</string>
    <string name="required_field">Required field</string>
    <string name="label_price">Price:</string>
    <string name="label_supplier">Supplier:</string>
    <string name="label_supplier_phone">Supplier Phone:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
    <string name="label_audiobook">Audiobook:</string>
    <string name="all_data_fields">All data fields must be specified</string>
</resources>
